@@ -168,7 +168,9 @@ fileio      = false
 #                                                    If set to autofile, DOSBox-X will warn if there are open file handles or a guest system is currently running.
 #                                                    Possible values: true, false, 1, 0, auto, autofile.
 #                           show advanced options: If set, the Configuration UI will display all config options (including advanced ones) by default.
-#                                   keyboard hook: Use keyboard hook (currently only on Windows) to catch special keys and synchronize the keyboard LEDs with the host
+#                                 mapper send key: Select the key the mapper SendKey function will send.
+#                                                    Possible values: winlogo, winmenu, alttab, ctrlesc, ctrlbreak, ctrlaltdel.
+#                                   keyboard hook: Use keyboard hook (currently only on Windows) to catch special keys and synchronize the keyboard LEDs with the host.
 #                                          weitek: If set, emulate the Weitek coprocessor. This option only has effect if cputype=386 or cputype=486.
 #                             bochs debug port e9: If set, emulate Bochs debug port E9h. ASCII text written to this I/O port is assumed to be debug output, and logged.
 #                                         machine: The type of machine DOSBox-X tries to emulate.
@@ -339,6 +341,7 @@ startbanner                                     = true
 dpi aware                                       = auto
 quit warning                                    = auto
 show advanced options                           = false
+mapper send key                                 = ctrlaltdel
 keyboard hook                                   = false
 weitek                                          = false
 bochs debug port e9                             = false
